--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=order-service
 spring.config.import=optional:configserver:http://localhost:8888
+logging.level.root=DEBUG
+
+#logging.level.com=DEBUG
 
 
 #server.port=8093
